Tests_Python/3-say_my_name.txt
The ``3-say_my_name`` module
======================

Using ``say_my_name``
-------------------

First import ``say_my_name`` from the ``3-say_my_name`` module:

    >>> say_my_name = __import__("3-say_my_name").say_my_name

Now use it:

    >>> say_my_name("Daniel", "Du")
    My name is Daniel Du

    >>> say_my_name("Daniel", )
    My name is Daniel 

    >>> say_my_name("", "")
    My name is  

    >>> say_my_name("Walter", None)
    Traceback (most recent call last):
    ...
    TypeError: last_name must be a string

    >>> say_my_name(None, "tal")
    Traceback (most recent call last):
    ...
    TypeError: first_name must be a string

    >>> say_my_name(1231, None)
    Traceback (most recent call last):
    ...
    TypeError: first_name must be a string

    >>> say_my_name()
    Traceback (most recent call last):
        ...
    TypeError: say_my_name() missing 1 required positional argument: 'first_name'

    >>> say_my_name("Hola", "Mundo", "Cruel")
    Traceback (most recent call last):
        ...
    TypeError: say_my_name() takes from 1 to 2 positional arguments but 3 were given

    >>> say_my_name( , "Orión")
    Traceback (most recent call last):
        ...
        say_my_name( , "Orión")
                     ^
    SyntaxError: invalid syntax
